
- Mbstring:
  . ini_set() with mbstring.detect_order changes the order of mb_detect_order
    as intended, since mbstring.detect_order is an INI_ALL setting. (tobee94)
  . Added GB18030-2022 to default encoding list for zh-CN. (HeRaNO)
  . Fixed bug GH-20836 (Stack overflow in mb_convert_variables with
    recursive array references). (alexandre-daubois)

- Opcache:
  . Fixed bug GH-20051 (apache2 shutdowns when restart is requested during
    preloading). (Arnaud, welcomycozyhom)

- OpenSSL:
  . Implemented GH-20310 (No critical extension indication in
    openssl_x509_parse() output). (StephenWall)

- PDO_PGSQL:
  . Clear session-local state disconnect-equivalent processing.
    (KentarouTakeda)

- Phar:
  . Support reference values in Phar::mungServer(). (ndossche)
  . Invalid values now throw in Phar::mungServer() instead of being silently
    ignored. (ndossche)
  . Support overridden methods in SplFileInfo for getMTime() and getPathname()
    when building a phar. (ndossche)
  . Mark Phar::buildFromIterator() base directory argument as a path.
    (ndossche)

- Reflection:
  . Fixed bug GH-20217 (ReflectionClass::isIterable() incorrectly returns true
    for classes with property hooks). (alexandre-daubois)

- Soap:
  . Soap::__setCookie() when cookie name is a digit is now not stored and represented
    as a string anymore but a int. (David Carlier)

- Sockets:
  . Added the TCP_USER_TIMEOUT constant for Linux to set the maximum time in milliseconds
        transmitted data can remain unacknowledged. (James Lucas)

- SPL:
  . DirectoryIterator key can now work better with filesystem supporting larger
    directory indexing. (David Carlier)

- Sqlite3:
  . Fix NUL byte truncation in sqlite3 TEXT column handling. (ndossche)

- Standard:
  . Fixed bug GH-19926 (reset internal pointer earlier while splicing array
    while COW violation flag is still set). (alexandre-daubois)

- Streams:
  . Added so_keepalive, tcp_keepidle, tcp_keepintvl and tcp_keepcnt stream