@@ -48,6 +48,8 @@ PHP                                                                        NEWS
   . Added GB18030-2022 to default encoding list for zh-CN. (HeRaNO)
   . Fixed bug GH-20836 (Stack overflow in mb_convert_variables with
     recursive array references). (alexandre-daubois)
+  . Fixed bug GH-20832 (assertion failure in mb_wchar_to_sjismac with
+    MacJapanese encoding). (Alex Dowad)
 
 - Opcache:
   . Fixed bug GH-20051 (apache2 shutdowns when restart is requested during
